wayland/color management: ignore obviously wrong HDR metadata

Some applications provide truly nonsensical luminance values, like 10 million nits.
This adds a basic sanity check to not use that for tone mapping

BUG: 494502